@@ -1,3 +1,8 @@
+2006-05-11  Thiemo Seufer  <ths@mips.com>
+
+	* config/tc-mips.c (append_insn): Don't check the range of j or
+	jal addresses.
+
 2006-05-11  Pedro Alves  <pedro_alves@portugalmail.pt>
 
 	* config/tc-arm.c (md_pcrel_from_section): Force a bias for
